Suggest Truth in preference to tolerance-based equality for exact floating-point comparisons.
PiperOrigin-RevId: 912171796